--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPW+JvTvvOfdm1gRHm+9+FF",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNgmg+bC7RLhOO0eZTp/LIv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -388,9 +389,9 @@
         "  #print(l)\n",
         "  #print(\"sum\",sum(a))\n",
         "  loss = torch.tensor(sum(a), requires_grad=True)\n",
-        "  return loss"
+        "  return torch.mean(loss)"
       ],
-      "execution_count": 178,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -481,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "35ffcf66-a391-4699-c576-d7301b9f08a8"
+        "outputId": "fc72f10c-264d-42aa-c03d-0bf9282ea604"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -493,21 +494,21 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 179,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 15:55:05,465] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 15:55:05,465] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 15:55:05,563] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 15:55:05,563] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 15:55:56,125] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:55:56,125] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:55:56,213] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 15:55:56,213] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
             "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:11,  2.61it/s]"
+            "  3%|▎         | 1/30 [00:00<00:10,  2.82it/s]"
           ]
         },
         {
@@ -521,7 +522,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:06,  3.05it/s]"
+            " 37%|███▋      | 11/30 [00:03<00:06,  3.07it/s]"
           ]
         },
         {
@@ -535,7 +536,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.16it/s]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.12it/s]"
           ]
         },
         {
@@ -549,7 +550,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:09<00:00,  3.15it/s]\n"
+            "100%|██████████| 30/30 [00:09<00:00,  3.16it/s]\n"
           ]
         },
         {
