--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -6,7 +6,7 @@
       "name": "extreme loss.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWXJqGiByy6jocUB9JV+8Y",
+      "authorship_tag": "ABX9TyPEpxbLbyu/hYNzMSuMBEB6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,7 +342,7 @@
         "id": "RUOXOOJWVizz"
       },
       "source": [
-        "a = [0.0]"
+        ""
       ],
       "execution_count": 185,
       "outputs": []
@@ -355,16 +355,14 @@
       "source": [
         "def try_loss(pred, true):\n",
         "  global a\n",
-        "  \n",
+        "  a = [0.0]\n",
         "  import numpy as np\n",
         "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
         "  h = 0.8\n",
         "  l = 0.2\n",
         "\n",
         "  loss = torch.tensor(0.0, requires_grad=True)\n",
-        "  \n",
-        "  \n",
-        "  \n",
+        "\n",
         "  #torch.cat((A,B))\n",
         "  l = 0\n",
         "  for i in range(0,len(pred)):\n",
@@ -372,7 +370,7 @@
         "      if((true[i][j]>h or true[i][j]<l) and (pred[i][j] <= h and pred[i][j] >= l)):\n",
         "        #temp = torch.tensor(0.0, requires_grad=True)\n",
         "        temp = torch.abs(torch.tensor(true[i][j]-pred[i][j]).clone().detach().requires_grad_(True))\n",
-        "        #loss = torch.unsqueeze(loss, 0)\n",
+        "        # loss = torch.unsqueeze(loss, 0)\n",
         "        #temp = torch.unsqueeze(temp, 0)\n",
         "        #print('ll',loss,temp)\n",
         "        np_arr = temp.cpu().detach().numpy().tolist()[0]\n",
@@ -389,9 +387,10 @@
         "  #print(l)\n",
         "  #print(\"sum\",sum(a))\n",
         "  loss = torch.tensor(sum(a), requires_grad=True)\n",
+        "  #print(\"sdf\",loss)\n",
         "  return torch.mean(loss)"
       ],
-      "execution_count": 186,
+      "execution_count": 191,
       "outputs": []
     },
     {
@@ -482,11 +481,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "64e408d8-b0ee-4bad-e267-f83de821226b"
+        "outputId": "dc2acace-e4e3-4a8f-8384-f1030fe4b4ae"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
-        "                                          loss_fn = try_loss )\n",
+        "                                          loss_fn = try_loss,  )\n",
         "model_ai.fit([train_tweet_count],val_series = [val_tweet_count], verbose=True)\n",
         "pred_ai = model_ai.predict(n=88, series = train_tweet_count )\n",
         "#pred_follower = model_ai_multiple.predict(n=36, series = train_follower )\n",
@@ -494,63 +493,63 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 187,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 16:03:07,944] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 16:03:07,944] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 16:03:08,041] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 16:03:08,041] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: UserWarning:\n",
+            "[2021-11-30 16:12:04,451] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 16:12:04,451] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 16:12:04,555] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 16:12:04,555] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:17: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:10,  2.72it/s]"
+            "  3%|▎         | 1/30 [00:00<00:11,  2.57it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 1.0485, validation loss: 1.5025, best val loss: 1.5025\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:06,  2.89it/s]"
+            " 37%|███▋      | 11/30 [00:03<00:06,  3.07it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 16.0087, validation loss: 16.5279, best val loss: 1.5025\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.00it/s]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.15it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 30.9336, validation loss: 31.5532, best val loss: 1.5025\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:09<00:00,  3.07it/s]\n"
+            "100%|██████████| 30/30 [00:09<00:00,  3.17it/s]\n"
           ]
         },
         {
