--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -6,7 +6,7 @@
       "name": "extreme loss.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEpxbLbyu/hYNzMSuMBEB6",
+      "authorship_tag": "ABX9TyN6VvXF6YDqmRzYaT8xdwEC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -355,7 +355,7 @@
       "source": [
         "def try_loss(pred, true):\n",
         "  global a\n",
-        "  a = [0.0]\n",
+        "  \n",
         "  import numpy as np\n",
         "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
         "  h = 0.8\n",
@@ -369,7 +369,7 @@
         "    for j in range(0,len(pred[0])):\n",
         "      if((true[i][j]>h or true[i][j]<l) and (pred[i][j] <= h and pred[i][j] >= l)):\n",
         "        #temp = torch.tensor(0.0, requires_grad=True)\n",
-        "        temp = torch.abs(torch.tensor(true[i][j]-pred[i][j]).clone().detach().requires_grad_(True))\n",
+        "        temp = torch.abs(torch.tensor(4*(true[i][j]-pred[i][j])).clone().detach().requires_grad_(True))\n",
         "        # loss = torch.unsqueeze(loss, 0)\n",
         "        #temp = torch.unsqueeze(temp, 0)\n",
         "        #print('ll',loss,temp)\n",
@@ -379,6 +379,11 @@
         "        #print(a,len(a))\n",
         "        #print(sum(a))\n",
         "        #loss =  torch.add(loss,temp)\n",
+        "      else:\n",
+        "        temp = torch.abs(torch.tensor(true[i][j]-pred[i][j]).clone().detach().requires_grad_(True))\n",
+        "        np_arr = temp.cpu().detach().numpy().tolist()[0]\n",
+        "        #loss = torch.stack((temp,loss))\n",
+        "        a.append(np_arr)\n",
         "        \n",
         "        #print('l',loss)\n",
         "  #loss = torch.subtract(pred_tensor,true_tensor)\n",
@@ -390,7 +395,7 @@
         "  #print(\"sdf\",loss)\n",
         "  return torch.mean(loss)"
       ],
-      "execution_count": 191,
+      "execution_count": 200,
       "outputs": []
     },
     {
@@ -481,7 +486,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "dc2acace-e4e3-4a8f-8384-f1030fe4b4ae"
+        "outputId": "ac5a7ed8-7481-40c7-9371-a9f68169ed57"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -493,63 +498,67 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 192,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 16:12:04,451] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 16:12:04,451] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 16:12:04,555] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 16:12:04,555] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:17: UserWarning:\n",
+            "[2021-11-30 16:22:01,454] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 16:22:01,454] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 16:22:01,547] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 16:22:01,547] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:28: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:11,  2.57it/s]"
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:17: UserWarning:\n",
+            "\n",
+            "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "\n",
+            "  3%|▎         | 1/30 [00:00<00:12,  2.31it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 883.3667, validation loss: 1607.1743, best val loss: 1607.1743\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:06,  3.07it/s]"
+            " 37%|███▋      | 11/30 [00:04<00:07,  2.57it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 14945.4879, validation loss: 15668.7617, best val loss: 1607.1743\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.15it/s]"
+            " 70%|███████   | 21/30 [00:07<00:03,  2.67it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 29007.9922, validation loss: 29730.3496, best val loss: 1607.1743\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:09<00:00,  3.17it/s]\n"
+            "100%|██████████| 30/30 [00:11<00:00,  2.66it/s]\n"
           ]
         },
         {
@@ -564,13 +573,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "k2srtnyr8WaE"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 351
+        },
+        "id": "k2srtnyr8WaE",
+        "outputId": "f6905764-b0d1-4276-b3a5-f84bdcb68710"
       },
       "source": [
-        ""
+        "pred_ai = model_ai.predict(n=75, series = train_tweet_count )\n",
+        "#pred_follower = model_ai_multiple.predict(n=36, series = train_follower )\n",
+        "error_tweet = try_loss(val_tweet_count[:75],pred_ai)\n",
+        "#error_follower = mape(val_follower[:36],pred_follower)\n",
+        "print(\"this is the error for the tweet_count:\",error_tweet )\n",
+        "\n",
+        "#fig1.savefig('forecast_75_days.png')\n",
+        "print('MAPE = {:.2f}%'.format(mape(series_ai_count, pred_ai)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 198,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-198-a90c4abdaa28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpred_ai\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_ai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m75\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_tweet_count\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#pred_follower = model_ai_multiple.predict(n=36, series = train_follower )\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0merror_tweet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtry_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_tweet_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m75\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpred_ai\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#error_follower = mape(val_follower[:36],pred_follower)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"this is the error for the tweet_count:\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0merror_tweet\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-194-32d8917c833b>\u001b[0m in \u001b[0;36mtry_loss\u001b[0;34m(pred, true)\u001b[0m\n\u001b[1;32m     15\u001b[0m       \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mh\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mtrue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mh\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m#temp = torch.tensor(0.0, requires_grad=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0;31m# loss = torch.unsqueeze(loss, 0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m#temp = torch.unsqueeze(temp, 0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: too many dimensions 'TimeSeries'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
