--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -6,7 +6,7 @@
       "name": "extreme loss.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/zw0BeV0IrCWFvIntk2sw",
+      "authorship_tag": "ABX9TyM4gn8JhZ2YQqyjhrv415GQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,9 +342,11 @@
         "id": "RUOXOOJWVizz"
       },
       "source": [
-        "a = [0.0]"
+        "def initialize_a(a):\n",
+        "  a = [0.0]\n",
+        "  return a"
       ],
-      "execution_count": 215,
+      "execution_count": 218,
       "outputs": []
     },
     {
@@ -355,7 +357,7 @@
       "source": [
         "def try_loss(pred, true):\n",
         "  global a\n",
-        "  \n",
+        "  a = initialize_a(a)\n",
         "  import numpy as np\n",
         "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
         "  h = 0.8\n",
@@ -395,7 +397,7 @@
         "  #print(\"sdf\",loss)\n",
         "  return torch.mean(loss)"
       ],
-      "execution_count": 216,
+      "execution_count": 219,
       "outputs": []
     },
     {
@@ -486,7 +488,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "8db5ae07-8a2f-4bf5-f5af-9c3a1e63e0d1"
+        "outputId": "7369e822-59b6-4625-f86a-fa10481d96a5"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -498,16 +500,16 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 217,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 16:29:23,290] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 16:29:23,290] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 16:29:23,381] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 16:29:23,381] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 16:31:13,839] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 16:31:13,839] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 16:31:13,940] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 16:31:13,940] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
             "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:28: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
@@ -516,49 +518,49 @@
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:12,  2.38it/s]"
+            "  3%|▎         | 1/30 [00:00<00:12,  2.30it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.9496, validation loss: 0.9512, best val loss: 0.9512\r"
+            "Training loss: 0.9480, validation loss: 0.9468, best val loss: 0.9468\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:04<00:07,  2.62it/s]"
+            " 37%|███▋      | 11/30 [00:04<00:07,  2.59it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.9517, validation loss: 0.9518, best val loss: 0.9512\r"
+            "Training loss: 0.9468, validation loss: 0.9468, best val loss: 0.9468\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:07<00:03,  2.65it/s]"
+            " 70%|███████   | 21/30 [00:08<00:03,  2.60it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.9518, validation loss: 0.9518, best val loss: 0.9512\r"
+            "Training loss: 0.9472, validation loss: 0.9468, best val loss: 0.9468\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:11<00:00,  2.67it/s]\n"
+            "100%|██████████| 30/30 [00:11<00:00,  2.62it/s]\n"
           ]
         },
         {
